# osrs-ironman-progession-tracker

./: .gitattributes  .gitignore  GIM-Sailing-Salvaging.md  Ironman-Boss-Progression.md  Ironman-Maxing.md  README.md  ROADMAP.md  app.js  index.html  package-lock.json  package.json  pyproject.toml  styles.css
.github/workflows/: update.yml
Temporary/: AccountProgress.xlsx  README.md  ideas.md  start.md
data/: bank.json  bank.txt  boaty_guide.json  boaty_progress.yaml  bosses.json  clog_categories.yaml  clues.json  collection_log.json  collection_log.yaml  combat_achievements.json  combat_achievements.yaml  diaries.yaml  diary_tasks.yaml  drops.yaml  league_tasks.yaml  pets.json  pets.yaml  potion_storage.json  quests.json  quests.yaml  recent_gains.json  skills.json
data/gim/: bosses.json  collection_log.json  combat_achievements.json  combat_achievements.yaml  diaries.yaml  diary_tasks.yaml  drops.yaml  pets.json  pets.yaml  quests.json  quests.yaml  skills.json
docs/: editor.html  index.html  update_stats.py
docs/data/: bank.json  boaty_progress.yaml  bosses.json  clues.json  collection_log.json  collection_log.yaml  combat_achievements.json  combat_achievements.yaml  diaries.yaml  drops.yaml  goals.yaml  (+11 more)
public/: stats.json
scripts/: build_diary_tasks.py  build_league_tasks.py  fetch-data.mjs  generate_readme.py  osrs_config.py  osrs_utils.py  suggest_drops.py  untradeable_values.py  update_bank.py  update_bank_local.ps1  update_stats.py  update_wiki_refs.py  validate_data.py
tests/: test_osrs_utils.py  test_update_bank.py  test_update_stats.py
(+7 files in other folders)
